--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -6,6 +6,10 @@
         <option value="7">7</option>
         <option value="8">8</option>
     </select>
+    <input type="checkbox" name="uppercase">uppercase
+        <input type="checkbox" name="numbers">numbers
+        <input type="checkbox" name="special">special
+
     <input type="submit" value="generate">
 </form>
 
